handles filename text overflow, fixes #390

--- a/css/default/racustom.css
+++ b/css/default/racustom.css
@@ -2184,7 +2184,9 @@ ul.none {
 }
 
 .daoTable .filename {
-    width:75%
+    width:75%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .daoTable .format {
